--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="/css/global.css">
+    <title>Thymeleaf</title>
 </head>
 <body>
 <h1>
